<resources>
    <string name="app_name">优购代步</string>

    <string name="tab_item_home_page">首页</string>
    <string name="tab_item_order">订单</string>
    <string name="tab_item_personal">我</string>

    <string name="quick_print">极速打印</string>
    <string name="relex_shop">轻松购物</string>
    <string name="second_hand_book_store">二手书城</string>

    <string name="personal_info">个人信息</string>
    <string name="personal_integral">个人积分</string>
    <string name="personal_wallet">个人钱包</string>
    <string name="setting">设置</string>
    <string name="myfiles">我的文件</string>
    <string name="account_manage">账号管理</string>
    <string name="log_out">退出登录</string>
    <string name="title_activity_home_page">HomePageActivity</string>

    <string name="log_in">登录</string>
    <string name="regist_in">注册</string>
    <string name="sign_up_quick">快速注册</string>

    <!--quick print page-->
    <string name="qp_welcome">欢迎光临极速打印店</string>
    <string name="qp_tip_add_file">添加文件</string>
    <string name="go_to_settle">去结算</string>
    <string name="title_activity_personal_info">PersonalInfoActivity</string>
    <string name="title_activity_personal_integral">PersonalIntegralActivity</string>
    <string name="title_activity_personal_wallet">PersonalWalletActivity</string>
    <string name="title_activity_my_file">MyFileActivity</string>
    <string name="title_activity_account_manage">AccountManageActivity</string>
    <string name="title_activity_setup">SetupActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_regist">RegistActivity</string>

    <!--login activity-->
    <string name="login_tips">登录</string>
    <string name="login_name">账号</string>
    <string name="login_password">密码</string>
    <string name="login_name_hint">手机号|邮箱|用户名</string>

    <string name="login_confirm">登录</string>
    <string name="login_cancel">取消</string>
    <string name="forget_password">忘记密码</string>
    <string name="regist_in_now">马上注册</string>
    <string name="find_back_password">找回密码</string>


    <string name="tips_account_is_not_valid">账号填写不规范，请检查并重新填写！</string>
    <string name="tips_password_can_not_empty">密码不能为空！</string>
    <string name="tips_account_can_not_empty">"账号不能为空"</string>
    <string name="tips_password_require_lens">密码应6-18位</string>

    <!--regist activity-->
    <string name="school_id">学号</string>
    <string name="account">账号</string>
    <string name="nickname">昵称</string>
    <string name="sex">性别</string>
    <string name="school">学校</string>
    <string name="major">专业</string>
    <string name="grade">年级</string>
    <string name="common_address">常用地址</string>
    <string name="phone_number">手机号码</string>
    <string name="email">邮箱</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="saoyisao">扫一扫</string>
    <string name="logout">退出</string>
    <string name="about_us">关于我们</string>

    <string name="user_info">用户信息</string>

    <string name="browse_documents">选择文档</string>
    <string name="settlement">确认订单</string>
    <string name="user_info_display">个人信息</string>
    <string name="complete_userinfo">完善个人资料</string>

    <string name="comfirm_to_download">确认下载?</string>

    <string name="tip_to_input_phone_number">请输入手机号码快速注册:</string>
    <string name="must_input">必填</string>
    <string name="choose_to_input">选填</string>
    <string name="tip_address">必填</string>
    <string name="complete">提交</string>
    <string name="set_password">设置密码</string>
    <string name="change_password">修改密码</string>

    <!--change password-->
    <string name="origin_password">原密码</string>
    <string name="new_password">新密码</string>
    <string name="comfirm_password">确认密码</string>
    <string name="user_not_login">用户未登录</string>
    <string name="password_need_bits">密码需6-18位</string>
    <string name="password_not_the_same">前后密码不一致</string>
    <string name="change_password_success">密码修改成功</string>
    <string name="change_password_failed">原密码不正确</string>

    <!--shopping settle page-->
    <string name="shopping_settle">结算</string>

</resources>
