<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lhc.android.great.Activity.LoginActivity"
    >
    <android.support.design.widget.AppBarLayout
        android:id="@+id/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/toolbar_layout">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_img_view_height">
            <ImageView
                android:id="@+id/iv_user_avatar"
                android:layout_width="@dimen/avatar_view_width_height"
                android:layout_height="@dimen/avatar_view_width_height"
                android:src="@drawable/avatar_default"
                android:scaleType="centerCrop"
                android:layout_centerInParent="true"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_input_height"
            android:orientation="horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/login_name"
                android:textSize="@dimen/login_activiyt_item_text_size"
                android:textColor="@color/red"
                android:gravity="center_vertical"/>
            <EditText
                android:id="@+id/et_login_account"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:singleLine="true"
                android:textSize="@dimen/login_activity_custom_text_size"
                android:hint="@string/login_name_hint"
                android:numeric="integer"
                android:gravity="center_vertical"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_input_height"
            android:orientation="horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="12dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/login_password"
                android:textColor="@color/red"
                android:textSize="@dimen/login_activiyt_item_text_size"
                android:gravity="center_vertical"/>
            <EditText
                android:id="@+id/et_login_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:textSize="@dimen/login_activity_custom_text_size"
                android:password="true"
                android:singleLine="true"
                android:hint="@string/login_password"
                android:gravity="center_vertical"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp">

            <Button
                android:id="@+id/btn_login_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login_cancel"
                android:background="@color/green"
                android:textColor="@color/white"
                android:textSize="@dimen/login_activiyt_item_text_size"/>

            <Button
                android:id="@+id/btn_login_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="12dp"
                android:text="@string/login_confirm"
                android:background="@color/green"
                android:textColor="@color/white"
                android:textSize="@dimen/login_activiyt_item_text_size"
                />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="40dp"
        android:text="@string/forget_password"
        android:textSize="@dimen/login_activiyt_item_text_size"/>

    <TextView
        android:id="@+id/tv_regist_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/regist_in_now"
        android:textSize="@dimen/login_activiyt_item_text_size"/>
</RelativeLayout>
