<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.lhc.android.great.Activity.CompleUserinfoActivity">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/userinfo_lv_item_height"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="@dimen/complete_info_item_text_width"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/nickname"
                    android:textSize="@dimen/lv_custom_text_size"/>

                <EditText
                    android:id="@+id/et_nickname"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_gravity="right"
                    android:singleLine="true"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/userinfo_lv_item_height"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">
                <TextView
                    android:layout_width="@dimen/complete_info_item_text_width"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="性别"
                    android:textSize="@dimen/lv_custom_text_size"/>

                <Spinner
                    android:id="@+id/spinner_sex"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:background="@null"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/userinfo_lv_item_height"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">
                <TextView
                    android:layout_width="@dimen/complete_info_item_text_width"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/phone_number"
                    android:textSize="@dimen/lv_custom_text_size"/>
                <TextView
                    android:id="@+id/tv_phonenumber"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:gravity="center_vertical"
                    android:singleLine="true"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/userinfo_lv_item_height"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">
                <TextView
                    android:layout_width="@dimen/complete_info_item_text_width"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/email"
                    android:textSize="@dimen/lv_custom_text_size"/>

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:singleLine="true"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/userinfo_lv_item_height"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">
                <TextView
                    android:layout_width="@dimen/complete_info_item_text_width"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/common_address"
                    android:textSize="@dimen/lv_custom_text_size"/>

                <EditText
                    android:id="@+id/et_common_address"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:singleLine="true"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/userinfo_lv_item_height"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">
                <TextView
                    android:layout_width="@dimen/complete_info_item_text_width"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/school"
                    android:textSize="@dimen/lv_custom_text_size"/>

                <EditText
                    android:id="@+id/et_school"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:singleLine="true"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/userinfo_lv_item_height"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="@dimen/complete_info_item_text_width"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/school_id"
                    android:textSize="@dimen/lv_custom_text_size"/>

                <EditText
                    android:id="@+id/et_shool_id"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:numeric="integer"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/userinfo_lv_item_height"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="@dimen/complete_info_item_text_width"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/major"
                    android:textSize="@dimen/lv_custom_text_size"/>

                <EditText
                    android:id="@+id/et_major"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/userinfo_lv_item_height"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="@dimen/complete_info_item_text_width"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/grade"
                    android:textSize="@dimen/lv_custom_text_size"/>

                <EditText
                    android:id="@+id/et_grade"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:singleLine="true" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_commit"
                android:layout_width="@dimen/large_btn_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/btn_bg_shape_two"
                android:text="@string/complete"
                android:textSize="@dimen/regist_button_text_size"
                android:textColor="@color/white"
                android:clickable="false"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
