<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.lhc.android.great.Activity.ChangePasswordActivity">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@+id/ll_reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        >

        <EditText
            android:id="@+id/et_origin_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/origin_password"
            android:singleLine="true"
            android:textSize="@dimen/custom_text_size"
            />

        <EditText
            android:id="@+id/et_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_password"
            android:textSize="@dimen/custom_text_size"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/et_comfirm_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/comfirm_password"
            android:textSize="@dimen/custom_text_size"
            android:layout_marginTop="10dp" />

        <Button
            android:id="@+id/btn_comfirm_to_change_password"
            android:layout_width="@dimen/large_btn_width"
            android:layout_height="wrap_content"
            android:text="确定"
            android:textColor="@color/white"
            android:textSize="@dimen/custom_text_size"
            android:background="@drawable/btn_bg_shape_two"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            />
    </LinearLayout>
</LinearLayout>
