<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/personal_bg_height"
        android:background="@color/pink"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_peosonal_page_avatar_"
            android:layout_width="@dimen/personal_page_avatar_width"
            android:layout_height="@dimen/personal_page_avatar_height"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center"
            android:src="@drawable/person"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="right">

        <TextView
            android:id="@+id/tv_log_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|bottom"
            android:gravity="center"
            android:text="@string/log_in"
            android:textSize="@dimen/pp_log_in_out_textsize"
            android:textColor="@color/green"
            android:layout_marginBottom="10dp"

            />

            <TextView
                android:id="@+id/tv_registe_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/regist_in"
                android:textColor="@color/green"
                android:textSize="@dimen/pp_log_in_out_textsize"
                android:gravity="center"
                android:layout_gravity="right|bottom"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"
               />
        </LinearLayout>
    </LinearLayout>
    <include
        layout="@layout/line_divider_gray"
        />
    <ListView
        android:id="@+id/lv_user_personal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
      />

    <include
        layout="@layout/line_divider_gray"/>

        <Button
            android:id="@+id/btn_log_out"
            android:layout_width="match_parent"
            android:layout_height="@dimen/logout_button_height"
            android:text="@string/log_out"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/btn_bg_shape"
          />
    </LinearLayout>

